fixed navigation to work on mobile devices

--- a/ubuy/src/components/shared/header/Header.css
+++ b/ubuy/src/components/shared/header/Header.css
@@ -76,4 +76,8 @@ header .nav-menu-button {
   header .nav-menu-button {
     display: block;
   }
+
+  header {
+    padding-right: 20px;
+  }
 }
